azure/ServiceManagement/Azure.Networking/v0.9.8/CmdletMDs/Azure.Networking.md
---
Module Name: Azure.Networking
Module Guid: D48CF693-4125-4D2D-8790-1514F44CE325
Download Help Link: http://go.microsoft.com/fwlink/?linkid=390762
Help Version: 1.0.4.0
Locale: en-US
updated_at: 10/14/2016 7:06 AM
ms.date: 10/14/2016
content_git_url: https://github.com/Azure/azure-docs-powershell/blob/master/azureps-cmdlets-docs/ServiceManagement/Azure.Networking/v0.9.8/CmdletMDs/Azure.Networking.md
gitcommit: https://github.com/Azure/azure-docs-powershell/blob/a56d0e01e65c2c33aa2af13dd29addc94ead6e88/azureps-cmdlets-docs/ServiceManagement/Azure.Networking/v0.9.8/CmdletMDs/Azure.Networking.md
ms.topic: conceptual
ms.prod: powershell
ms.service: Azure PowerShell
ms.technology: Azure PowerShell
author: visual-studio-china
keywords: powershell, content
manager: visual-studio-china
---

# Azure.Networking Module
## Description
This topic displays help topics for the Azure Networking Cmdlets. 

## Azure.Networking Cmdlets
### [Add-AzureApplicationGatewaySslCertificate](Add-AzureApplicationGatewaySslCertificate.md)
Adds an SSL certificate to an application gateway.


### [Get-AzureApplicationGatewayConfig](Get-AzureApplicationGatewayConfig.md)
Gets application gateway configuration.


### [Get-AzureApplicationGatewaySslCertificate](Get-AzureApplicationGatewaySslCertificate.md)
Gets application gateway certificates.


### [Get-AzureApplicationGateway](Get-AzureApplicationGateway.md)
Gets an application gateway.


### [Get-AzureEffectiveRouteTable](Get-AzureEffectiveRouteTable.md)
Gets the route applied in a virtual machine.


### [Get-AzureIPForwarding](Get-AzureIPForwarding.md)
Gets the status of IP forwarding.


### [Get-AzureLocalNetworkGateway](Get-AzureLocalNetworkGateway.md)



### [Get-AzureNetworkSecurityGroupAssociation](Get-AzureNetworkSecurityGroupAssociation.md)
Gets a network security group for a virtual machine, network adapter, or PaaS role.


### [Get-AzureNetworkSecurityGroupConfig](Get-AzureNetworkSecurityGroupConfig.md)
Gets details for a network security group.


### [Get-AzureNetworkSecurityGroupForSubnet](Get-AzureNetworkSecurityGroupForSubnet.md)
Gets the network security group for a subnet.


### [Get-AzureNetworkSecurityGroup](Get-AzureNetworkSecurityGroup.md)
Gets details for a network security group.


### [Get-AzureRouteTable](Get-AzureRouteTable.md)
Gets a route table.


### [Get-AzureSubnetRouteTable](Get-AzureSubnetRouteTable.md)
Gets a route table for a subnet.


### [Get-AzureVirtualNetworkGatewayConnection](Get-AzureVirtualNetworkGatewayConnection.md)



### [Get-AzureVirtualNetworkGatewayDiagnostics](Get-AzureVirtualNetworkGatewayDiagnostics.md)



### [Get-AzureVirtualNetworkGatewayIPsecParameters](Get-AzureVirtualNetworkGatewayIPsecParameters.md)



### [Get-AzureVirtualNetworkGatewayKey](Get-AzureVirtualNetworkGatewayKey.md)



### [Get-AzureVirtualNetworkGateway](Get-AzureVirtualNetworkGateway.md)



### [Get-AzureVNetConnection](Get-AzureVNetConnection.md)
Gets connections to an Azure virtual network.


### [Get-AzureVNetGatewayDiagnostics](Get-AzureVNetGatewayDiagnostics.md)
Gets the current state of diagnostics for a virtual network gateway.


### [Get-AzureVNetGatewayIPsecParameters](Get-AzureVNetGatewayIPsecParameters.md)
Gets IPsec parameters for the connection between a virtual network gateway and a local network site.


### [Get-AzureVNetGatewayKey](Get-AzureVNetGatewayKey.md)
Gets the pre-shared key for the connection between a virtual network gateway and a local network site.


### [Get-AzureVNetGateway](Get-AzureVNetGateway.md)
Gets the status of a virtual network gateway.


### [New-AzureApplicationGateway](New-AzureApplicationGateway.md)
Creates an application gateway.


### [New-AzureLocalNetworkGateway](New-AzureLocalNetworkGateway.md)



### [New-AzureNetworkSecurityGroup](New-AzureNetworkSecurityGroup.md)
Creates an Azure network security group.


### [New-AzureRouteTable](New-AzureRouteTable.md)
Creates a route table.


### [New-AzureVirtualNetworkGatewayConnection](New-AzureVirtualNetworkGatewayConnection.md)



### [New-AzureVirtualNetworkGateway](New-AzureVirtualNetworkGateway.md)



### [New-AzureVNetGateway](New-AzureVNetGateway.md)
Creates a VPN gateway in a virtual network.


### [Remove-AzureApplicationGatewaySslCertificate](Remove-AzureApplicationGatewaySslCertificate.md)
Removes an SSL certificate from an application gateway.


### [Remove-AzureApplicationGateway](Remove-AzureApplicationGateway.md)
Removes an application gateway.


### [Remove-AzureLocalNetworkGateway](Remove-AzureLocalNetworkGateway.md)



### [Remove-AzureNetworkSecurityGroupAssociation](Remove-AzureNetworkSecurityGroupAssociation.md)
Removes a network security group.


### [Remove-AzureNetworkSecurityGroupFromSubnet](Remove-AzureNetworkSecurityGroupFromSubnet.md)
Dissociates a network security group from a subnet.


### [Remove-AzureNetworkSecurityGroup](Remove-AzureNetworkSecurityGroup.md)
Deletes a network security group.


### [Remove-AzureNetworkSecurityRule](Remove-AzureNetworkSecurityRule.md)
Removes a network security rule from a network security group.


### [Remove-AzureRouteTable](Remove-AzureRouteTable.md)
Removes a route table.


### [Remove-AzureRoute](Remove-AzureRoute.md)
Removes a route from a route table.


### [Remove-AzureSubnetRouteTable](Remove-AzureSubnetRouteTable.md)
Removes a route table association from a subnet.


### [Remove-AzureVirtualNetworkGatewayConnection](Remove-AzureVirtualNetworkGatewayConnection.md)



### [Remove-AzureVirtualNetworkGateway](Remove-AzureVirtualNetworkGateway.md)



### [Remove-AzureVNetGatewayDefaultSite](Remove-AzureVNetGatewayDefaultSite.md)
Removes the default route for forced tunneling traffic.


### [Remove-AzureVNetGateway](Remove-AzureVNetGateway.md)
Deletes a VPN gateway.


### [Reset-AzureLocalNetworkGateway](Reset-AzureLocalNetworkGateway.md)



### [Reset-AzureVirtualNetworkGatewayConnection](Reset-AzureVirtualNetworkGatewayConnection.md)



### [Reset-AzureVirtualNetworkGatewayKey](Reset-AzureVirtualNetworkGatewayKey.md)



### [Reset-AzureVirtualNetworkGateway](Reset-AzureVirtualNetworkGateway.md)



### [Reset-AzureVNetGateway](Reset-AzureVNetGateway.md)
Resets a virtual network VPN gateway.


### [Resize-AzureVirtualNetworkGateway](Resize-AzureVirtualNetworkGateway.md)



### [Resize-AzureVNetGateway](Resize-AzureVNetGateway.md)
Resizes a VPN gateway.


### [Set-AzureApplicationGatewayConfig](Set-AzureApplicationGatewayConfig.md)
Configures an application gateway.


### [Set-AzureIPForwarding](Set-AzureIPForwarding.md)
Enables or disables IP forwarding.


### [Set-AzureNetworkSecurityGroupAssociation](Set-AzureNetworkSecurityGroupAssociation.md)
Associates a network security group to a virtual machine, PaaS role, or network adapter.


### [Set-AzureNetworkSecurityGroupToSubnet](Set-AzureNetworkSecurityGroupToSubnet.md)
Associates a network security group to a subnet.


### [Set-AzureNetworkSecurityRule](Set-AzureNetworkSecurityRule.md)
Adds or modifies a network security rule in a network security group.


### [Set-AzureRoute](Set-AzureRoute.md)
Creates a route in a route table.


### [Set-AzureSubnetRouteTable](Set-AzureSubnetRouteTable.md)
Associates a route table to a subnet.


### [Set-AzureVirtualNetworkGatewayIPsecParameters](Set-AzureVirtualNetworkGatewayIPsecParameters.md)



### [Set-AzureVirtualNetworkGatewayKey](Set-AzureVirtualNetworkGatewayKey.md)



### [Set-AzureVNetGatewayDefaultSite](Set-AzureVNetGatewayDefaultSite.md)
Sets default site for forced tunneling traffic.


### [Set-AzureVNetGatewayIPsecParameters](Set-AzureVNetGatewayIPsecParameters.md)
Sets IPsec parameters for the connection between a virtual network gateway and a local network site.


### [Set-AzureVNetGatewayKey](Set-AzureVNetGatewayKey.md)
Sets the pre-shared key for the connection between an Azure VPN gateway and a local network site.


### [Set-AzureVNetGateway](Set-AzureVNetGateway.md)
Enables or disables a VPN gateway for an Azure virtual network.


### [Start-AzureApplicationGateway](Start-AzureApplicationGateway.md)
Starts an application gateway.


### [Start-AzureVirtualNetworkGatewayDiagnostics](Start-AzureVirtualNetworkGatewayDiagnostics.md)



### [Start-AzureVNetGatewayDiagnostics](Start-AzureVNetGatewayDiagnostics.md)
Starts gateway diagnostics for a VPN gateway.


### [Stop-AzureApplicationGateway](Stop-AzureApplicationGateway.md)
Stops an application gateway.


### [Stop-AzureVirtualNetworkGatewayDiagnostics](Stop-AzureVirtualNetworkGatewayDiagnostics.md)



### [Stop-AzureVNetGatewayDiagnostics](Stop-AzureVNetGatewayDiagnostics.md)
Stops a running VPN gateway diagnostics session.


### [Update-AzureApplicationGateway](Update-AzureApplicationGateway.md)
Updates an application gateway.



